isl-rs/src/schedule.rs

use crate::*;

extern "C" {
  pub fn isl_options_set_schedule_max_coefficient(ctx: CtxRef, val: c_int) -> Stat;
  pub fn isl_options_get_schedule_max_coefficient(ctx: CtxRef) -> c_int;
  pub fn isl_options_set_schedule_max_constant_term(ctx: CtxRef, val: c_int) -> Stat;
  pub fn isl_options_get_schedule_max_constant_term(ctx: CtxRef) -> c_int;
  pub fn isl_options_set_schedule_maximize_band_depth(ctx: CtxRef, val: c_int) -> Stat;
  pub fn isl_options_get_schedule_maximize_band_depth(ctx: CtxRef) -> c_int;
  pub fn isl_options_set_schedule_maximize_coincidence(ctx: CtxRef, val: c_int) -> Stat;
  pub fn isl_options_get_schedule_maximize_coincidence(ctx: CtxRef) -> c_int;
  pub fn isl_options_set_schedule_outer_coincidence(ctx: CtxRef, val: c_int) -> Stat;
  pub fn isl_options_get_schedule_outer_coincidence(ctx: CtxRef) -> c_int;
  pub fn isl_options_set_schedule_split_scaled(ctx: CtxRef, val: c_int) -> Stat;
  pub fn isl_options_get_schedule_split_scaled(ctx: CtxRef) -> c_int;
  pub fn isl_options_set_schedule_treat_coalescing(ctx: CtxRef, val: c_int) -> Stat;
  pub fn isl_options_get_schedule_treat_coalescing(ctx: CtxRef) -> c_int;
  pub fn isl_options_set_schedule_separate_components(ctx: CtxRef, val: c_int) -> Stat;
  pub fn isl_options_get_schedule_separate_components(ctx: CtxRef) -> c_int;
  pub fn isl_options_set_schedule_serialize_sccs(ctx: CtxRef, val: c_int) -> Stat;
  pub fn isl_options_get_schedule_serialize_sccs(ctx: CtxRef) -> c_int;
  pub fn isl_options_set_schedule_whole_component(ctx: CtxRef, val: c_int) -> Stat;
  pub fn isl_options_get_schedule_whole_component(ctx: CtxRef) -> c_int;
  pub fn isl_options_set_schedule_carry_self_first(ctx: CtxRef, val: c_int) -> Stat;
  pub fn isl_options_get_schedule_carry_self_first(ctx: CtxRef) -> c_int;
  pub fn isl_schedule_constraints_copy(sc: ScheduleConstraintsRef) -> Option<ScheduleConstraints>;
  pub fn isl_schedule_constraints_on_domain(domain: UnionSet) -> Option<ScheduleConstraints>;
  pub fn isl_schedule_constraints_set_context(sc: ScheduleConstraints, context: Set) -> Option<ScheduleConstraints>;
  pub fn isl_schedule_constraints_set_validity(sc: ScheduleConstraints, validity: UnionMap) -> Option<ScheduleConstraints>;
  pub fn isl_schedule_constraints_set_coincidence(sc: ScheduleConstraints, coincidence: UnionMap) -> Option<ScheduleConstraints>;
  pub fn isl_schedule_constraints_set_proximity(sc: ScheduleConstraints, proximity: UnionMap) -> Option<ScheduleConstraints>;
  pub fn isl_schedule_constraints_set_conditional_validity(sc: ScheduleConstraints, condition: UnionMap, validity: UnionMap) -> Option<ScheduleConstraints>;
  pub fn isl_schedule_constraints_free(sc: ScheduleConstraints) -> *mut c_void;
  pub fn isl_schedule_constraints_get_ctx(sc: ScheduleConstraintsRef) -> Option<CtxRef>;
  pub fn isl_schedule_constraints_get_domain(sc: ScheduleConstraintsRef) -> Option<UnionSet>;
  pub fn isl_schedule_constraints_get_context(sc: ScheduleConstraintsRef) -> Option<Set>;
  pub fn isl_schedule_constraints_get_validity(sc: ScheduleConstraintsRef) -> Option<UnionMap>;
  pub fn isl_schedule_constraints_get_coincidence(sc: ScheduleConstraintsRef) -> Option<UnionMap>;
  pub fn isl_schedule_constraints_get_proximity(sc: ScheduleConstraintsRef) -> Option<UnionMap>;
  pub fn isl_schedule_constraints_get_conditional_validity(sc: ScheduleConstraintsRef) -> Option<UnionMap>;
  pub fn isl_schedule_constraints_get_conditional_validity_condition(sc: ScheduleConstraintsRef) -> Option<UnionMap>;
  pub fn isl_schedule_constraints_apply(sc: ScheduleConstraints, umap: UnionMap) -> Option<ScheduleConstraints>;
  pub fn isl_schedule_constraints_read_from_str(ctx: CtxRef, str: CStr) -> Option<ScheduleConstraints>;
  pub fn isl_schedule_constraints_read_from_file(ctx: CtxRef, input: *mut FILE) -> Option<ScheduleConstraints>;
  pub fn isl_printer_print_schedule_constraints(p: Printer, sc: ScheduleConstraintsRef) -> Option<Printer>;
  pub fn isl_schedule_constraints_dump(sc: ScheduleConstraintsRef) -> ();
  pub fn isl_schedule_constraints_to_str(sc: ScheduleConstraintsRef) -> Option<CString>;
  pub fn isl_schedule_constraints_compute_schedule(sc: ScheduleConstraints) -> Option<Schedule>;
  pub fn isl_union_set_compute_schedule(domain: UnionSet, validity: UnionMap, proximity: UnionMap) -> Option<Schedule>;
  pub fn isl_schedule_empty(space: Space) -> Option<Schedule>;
  pub fn isl_schedule_from_domain(domain: UnionSet) -> Option<Schedule>;
  pub fn isl_schedule_copy(sched: ScheduleRef) -> Option<Schedule>;
  pub fn isl_schedule_free(sched: Schedule) -> *mut c_void;
  pub fn isl_schedule_get_map(sched: ScheduleRef) -> Option<UnionMap>;
  pub fn isl_schedule_get_ctx(sched: ScheduleRef) -> Option<CtxRef>;
  pub fn isl_schedule_plain_is_equal(schedule1: ScheduleRef, schedule2: ScheduleRef) -> Bool;
  pub fn isl_schedule_get_root(schedule: ScheduleRef) -> Option<ScheduleNode>;
  pub fn isl_schedule_get_domain(schedule: ScheduleRef) -> Option<UnionSet>;
  pub fn isl_schedule_foreach_schedule_node_top_down(sched: ScheduleRef, fn_: unsafe extern "C" fn(node: ScheduleNodeRef, user: *mut c_void) -> Bool, user: *mut c_void) -> Stat;
  pub fn isl_schedule_map_schedule_node_bottom_up(schedule: Schedule, fn_: unsafe extern "C" fn(node: ScheduleNode, user: *mut c_void) -> Option<ScheduleNode>, user: *mut c_void) -> Option<Schedule>;
  pub fn isl_schedule_insert_context(schedule: Schedule, context: Set) -> Option<Schedule>;
  pub fn isl_schedule_insert_partial_schedule(schedule: Schedule, partial: MultiUnionPwAff) -> Option<Schedule>;
  pub fn isl_schedule_insert_guard(schedule: Schedule, guard: Set) -> Option<Schedule>;
  pub fn isl_schedule_sequence(schedule1: Schedule, schedule2: Schedule) -> Option<Schedule>;
  pub fn isl_schedule_set(schedule1: Schedule, schedule2: Schedule) -> Option<Schedule>;
  pub fn isl_schedule_intersect_domain(schedule: Schedule, domain: UnionSet) -> Option<Schedule>;
  pub fn isl_schedule_gist_domain_params(schedule: Schedule, context: Set) -> Option<Schedule>;
  pub fn isl_schedule_reset_user(schedule: Schedule) -> Option<Schedule>;
  pub fn isl_schedule_align_params(schedule: Schedule, space: Space) -> Option<Schedule>;
  pub fn isl_schedule_pullback_union_pw_multi_aff(schedule: Schedule, upma: UnionPwMultiAff) -> Option<Schedule>;
  pub fn isl_schedule_expand(schedule: Schedule, contraction: UnionPwMultiAff, expansion: Schedule) -> Option<Schedule>;
  pub fn isl_schedule_read_from_file(ctx: CtxRef, input: *mut FILE) -> Option<Schedule>;
  pub fn isl_schedule_read_from_str(ctx: CtxRef, str: CStr) -> Option<Schedule>;
  pub fn isl_printer_print_schedule(p: Printer, schedule: ScheduleRef) -> Option<Printer>;
  pub fn isl_schedule_dump(schedule: ScheduleRef) -> ();
  pub fn isl_schedule_to_str(schedule: ScheduleRef) -> Option<CString>;
}

#[repr(transparent)]
#[derive(Debug)]
pub struct ScheduleConstraints(pub NonNull<c_void>);

#[repr(transparent)]
#[derive(Debug, Clone, Copy)]
pub struct ScheduleConstraintsRef(pub NonNull<c_void>);

impl ScheduleConstraints {
  #[inline(always)]
  pub fn read(&self) -> ScheduleConstraints { unsafe { ptr::read(self) } }
  #[inline(always)]
  pub fn write(&self, x: ScheduleConstraints) { unsafe { ptr::write(self as *const _ as _, x) } }
}

impl AsRef<ScheduleConstraintsRef> for ScheduleConstraints {
  #[inline(always)]
  fn as_ref(&self) -> &ScheduleConstraintsRef { unsafe { mem::transmute(self) } }
}

impl std::ops::Deref for ScheduleConstraints {
  type Target = ScheduleConstraintsRef;
  #[inline(always)]
  fn deref(&self) -> &ScheduleConstraintsRef { self.as_ref() }
}

impl To<Option<ScheduleConstraints>> for *mut c_void {
  #[inline(always)]
  unsafe fn to(self) -> Option<ScheduleConstraints> { NonNull::new(self).map(ScheduleConstraints) }
}
